[gd_scene load_steps=13 format=2]

[ext_resource path="res://cerita/cerita.tscn" type="PackedScene" id=1]
[ext_resource path="res://asset/cerita/scene5/scene_5.png" type="Texture" id=2]
[ext_resource path="res://asset/cerita/scene5/Narasi_Scene5.wav" type="AudioStream" id=3]
[ext_resource path="res://cerita/scene5/Scene5.gd" type="Script" id=4]
[ext_resource path="res://asset/cerita/scene5/Narasi_Scene5_2.wav" type="AudioStream" id=5]
[ext_resource path="res://asset/cerita/scene5/03Rakyat_Scene5.wav" type="AudioStream" id=6]
[ext_resource path="res://asset/cerita/scene5/02Hitam_Scene5.wav" type="AudioStream" id=7]
[ext_resource path="res://asset/cerita/scene5/01Hitam_Scene5.wav" type="AudioStream" id=8]
[ext_resource path="res://cerita/font.tres" type="DynamicFont" id=9]
[ext_resource path="res://cerita/dialog.tres" type="DynamicFont" id=10]
[ext_resource path="res://asset/cerita/scene5/Narasi_Scene5_Lanjutan.wav" type="AudioStream" id=11]
[ext_resource path="res://asset/cerita/scene5/01Hitam_Scene5_Lanjutan.wav" type="AudioStream" id=12]

[node name="Scene5" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="TextureRect" parent="Control" index="0"]
texture = ExtResource( 2 )

[node name="dialog1" type="Label" parent="Control" index="1"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 872.0
margin_top = 160.0
margin_right = 1177.0
margin_bottom = 193.0
custom_fonts/font = ExtResource( 10 )
text = "“Mereka terus saja
 menyengsarakan rakyat ku..”"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialog2" type="Label" parent="Control" index="2"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 936.0
margin_top = 176.0
margin_right = 1081.0
margin_bottom = 171.0
custom_fonts/font = ExtResource( 10 )
text = "“Hei... berhenti”"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialog3" type="Label" parent="Control" index="3"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 592.0
margin_top = 224.0
margin_right = 783.0
margin_bottom = 219.0
custom_fonts/font = ExtResource( 10 )
text = "\"Tuan.. Maaf tuan..\""
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dialog4" type="Label" parent="Control" index="4"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 784.0
margin_top = 136.0
margin_right = 1203.0
margin_bottom = 207.0
custom_fonts/font = ExtResource( 10 )
text = "“Jangan kalian kirim upeti itu 
ke kerajaan mataram, kenapa kita harus tunduk?,
kita punya mempunyai kedaulatan”"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" parent="Control" index="5"]
margin_left = 72.0
margin_top = 32.0
margin_right = 864.0
margin_bottom = 128.0

[node name="narasi" type="Label" parent="Control/Panel" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mengetahui kerajaan melayu jambi harus membayar upeti 
kepada kerajaan Mataram, orang kayo hitam pun marah. "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="narasi2" type="Label" parent="Control/Panel" index="1"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ketika pengiriman upeti berlangsung, 
orang kayo hitam datang menghalang."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="narasi3" type="Label" parent="Control/Panel" index="2"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Orang kayo hitam berhasil meyakinkan penduduk kerajaan,
sehingga tidak ada lagi upeti yang dikirimkan ke kerajaan mataram."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="narasi" type="AudioStreamPlayer" parent="." index="1"]
stream = ExtResource( 3 )
autoplay = true

[node name="narasi2" type="AudioStreamPlayer" parent="." index="2"]
stream = ExtResource( 5 )

[node name="narasi3" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource( 11 )

[node name="dialog" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource( 8 )

[node name="dialog2" type="AudioStreamPlayer" parent="." index="5"]
stream = ExtResource( 7 )

[node name="dialog3" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource( 6 )

[node name="dialog4" type="AudioStreamPlayer" parent="." index="7"]
stream = ExtResource( 12 )

[node name="Tween" type="Tween" parent="." index="8"]
[connection signal="finished" from="narasi" to="." method="_on_narasi_finished"]
[connection signal="finished" from="narasi2" to="." method="_on_narasi2_finished"]
[connection signal="finished" from="narasi3" to="." method="_on_narasi3_finished"]
[connection signal="finished" from="dialog" to="." method="_on_dialog_finished"]
[connection signal="finished" from="dialog2" to="." method="_on_dialog2_finished"]
[connection signal="finished" from="dialog3" to="." method="_on_dialog3_finished"]
[connection signal="finished" from="dialog4" to="." method="_on_dialog4_finished"]
